# src/routes/publico.routes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const publicoController = require('../controllers/publico.controller');
+
+router.get('/:token', publicoController.paginaBanda);
+
+module.exports = router;
